--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a{color:#489}
 a:not(.nr):visited {color:#926}
 a.nr{ text-decoration:none;border:1px solid yellow;padding:0.25em;margin:0.25em; }
 a:valid{color:#fff}
+pre.nr{border:2px solid white}
 span.nr{margin:0.5em;padding:0.25em;background:black;border: 0.15em solid rgba(2000, 150, 10, 0.8);user-select: contain;}
 span{user-select: none;}
 @keyframes fade {
